Refactored the version and services crud apis
